<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2F4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:drawableLeft="@drawable/password" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="keep me loggedIn" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#1C2868"
        android:shadowColor="#0E2551"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/not_registered" />

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:text="@string/register"
        android:textColor="#1C2868"
        android:textSize="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>
